Changes by Austin